src/libqtextbrowser.h

typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QPaintEvent QPaintEvent;
typedef struct QTextBrowser QTextBrowser;
typedef struct QUrl QUrl;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
QTextBrowser* QTextBrowser_new(QWidget* parent);
QTextBrowser* QTextBrowser_new2();
QMetaObject* QTextBrowser_MetaObject(const QTextBrowser* self);
void* QTextBrowser_Metacast(QTextBrowser* self, const char* param1);
int QTextBrowser_Metacall(QTextBrowser* self, int param1, int param2, void** param3);
libqt_string QTextBrowser_Tr(const char* s);
QUrl* QTextBrowser_Source(const QTextBrowser* self);
int QTextBrowser_SourceType(const QTextBrowser* self);
libqt_list /* of libqt_string */ QTextBrowser_SearchPaths(const QTextBrowser* self);
void QTextBrowser_SetSearchPaths(QTextBrowser* self, libqt_list /* of libqt_string */ paths);
QVariant* QTextBrowser_LoadResource(QTextBrowser* self, int typeVal, QUrl* name);
bool QTextBrowser_IsBackwardAvailable(const QTextBrowser* self);
bool QTextBrowser_IsForwardAvailable(const QTextBrowser* self);
void QTextBrowser_ClearHistory(QTextBrowser* self);
libqt_string QTextBrowser_HistoryTitle(const QTextBrowser* self, int param1);
QUrl* QTextBrowser_HistoryUrl(const QTextBrowser* self, int param1);
int QTextBrowser_BackwardHistoryCount(const QTextBrowser* self);
int QTextBrowser_ForwardHistoryCount(const QTextBrowser* self);
bool QTextBrowser_OpenExternalLinks(const QTextBrowser* self);
void QTextBrowser_SetOpenExternalLinks(QTextBrowser* self, bool open);
bool QTextBrowser_OpenLinks(const QTextBrowser* self);
void QTextBrowser_SetOpenLinks(QTextBrowser* self, bool open);
void QTextBrowser_SetSource(QTextBrowser* self, QUrl* name);
void QTextBrowser_SetSource2(QTextBrowser* self, QUrl* name, int typeVal);
void QTextBrowser_Backward(QTextBrowser* self);
void QTextBrowser_Forward(QTextBrowser* self);
void QTextBrowser_Home(QTextBrowser* self);
void QTextBrowser_Reload(QTextBrowser* self);
void QTextBrowser_BackwardAvailable(QTextBrowser* self, bool param1);
void QTextBrowser_ForwardAvailable(QTextBrowser* self, bool param1);
void QTextBrowser_HistoryChanged(QTextBrowser* self);
void QTextBrowser_SourceChanged(QTextBrowser* self, QUrl* param1);
void QTextBrowser_Highlighted(QTextBrowser* self, QUrl* param1);
void QTextBrowser_AnchorClicked(QTextBrowser* self, QUrl* param1);
bool QTextBrowser_Event(QTextBrowser* self, QEvent* e);
void QTextBrowser_KeyPressEvent(QTextBrowser* self, QKeyEvent* ev);
void QTextBrowser_MouseMoveEvent(QTextBrowser* self, QMouseEvent* ev);
void QTextBrowser_MousePressEvent(QTextBrowser* self, QMouseEvent* ev);
void QTextBrowser_MouseReleaseEvent(QTextBrowser* self, QMouseEvent* ev);
void QTextBrowser_FocusOutEvent(QTextBrowser* self, QFocusEvent* ev);
bool QTextBrowser_FocusNextPrevChild(QTextBrowser* self, bool next);
void QTextBrowser_PaintEvent(QTextBrowser* self, QPaintEvent* e);
libqt_string QTextBrowser_Tr2(const char* s, const char* c);
libqt_string QTextBrowser_Tr3(const char* s, const char* c, int n);
void QTextBrowser_DoSetSource(QTextBrowser* self, QUrl* name);